# i3gs

./: .gitignore  CMakeLists.txt  Makefile  PKGBUILD  README.md  i3gs.conf  main.cpp
Sources/: Block.cpp  Block.h  ExecCommand.h.gch  Manager.cpp  Manager.h
src/: Block.cpp  Block.h  Manager.cpp  Manager.h  main.cpp
